# wordle-new

./: .gitignore  Cargo.toml  README.md  answers.json  bench.py  matches.cbor
.github/worflows/: bench.yaml
.github/workflows/: bench.yaml
src/: guess.rs  main.rs  response.rs  word.rs
