[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.11.0"
rayon = "1.8.0"
serde = "1.0.183"
serde_json = "1.0.104"

[profile.release]
debug = true
